# auth-service-rs

./: Build.rs  Cargo.toml  Dockerfile
migrations/2024-06-21-030256_create_user/: down.sql  up.sql
src/: config.rs  main.rs
src/models/user/: db.rs
src/models/user/db/: model.rs  redis.rs  validation.rs
src/proto/: proto.rs
src/utils/: jwtoken.rs
